[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hanamikoji-engine"
version = "1.0.0"
authors = [
  { name="Dmitrii Fomin", email="fomin.dm@gmail.com" },
]
description = "Simulator for board game Hanamikoji"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dfomin/hanamikoji-engine/"
"Bug Tracker" = "https://github.com/dfomin/hanamikoji-engine/issues"